--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* header styles */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
@@ -50,6 +51,7 @@ p {
     font-size: 16px;
 }
 
+/* Image directly under header */
 figure {
     height: 800px;
     width: 100%;
@@ -69,12 +71,32 @@ figure {
     margin-left: 25px;
 }
 
+/* article styling in the main body */
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+article img {
+    max-height: 200px;
+}
+
+article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* section styling in aside */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -102,24 +124,7 @@ section img{
     max-width: 150px;
 }
 
-article {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-article img {
-    max-height: 200px;
-}
-
-article h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* footer styling */
 footer {
     padding: 30px;
     clear: both;
