--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ p {
     font-size: 16px;
 }
 
-/* Image directly under header */
+/* Image link directly under header */
 figure {
     height: 800px;
     width: 100%;
